# BlueskyX

./: .env.sample  README.md  docker-compose.yml
aws-cdk-client/: Dockerfile  README.md
hackathon_1/: Dockerfile  main.py  pyproject.toml
hackathon_1/hackathon_1/: __init__.py  main.py
project/: .env.example  .gitignore  cdk.json  entrypoint.sh  package-lock.json  package.json
project/.aws/: config.example  credentials.example
project/assets/lambda/blueskyx/: index.py
